# Roost

./: .gitignore  .swiftformat  .swiftlint.yml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  Package.resolved  Package.swift  README.md  RELEASE-CHECKLIST.md  SECURITY.md  THIRD_PARTY_LICENSES.md  design.md  flake.nix
.cargo/: config.toml
.claude/commands/: build-local.md  release.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: checks.yml  jj-integration.yml  release-beta.yml  release-ios.yml  release.yml
Muxy/: Info.plist  MuxyApp.swift
Muxy/Commands/: MuxyCommands.swift
Muxy/Extensions/: BundleExtension.swift  DTOConversions.swift  Notification+Names.swift  View+KeyboardShortcut.swift
Muxy/Models/: AgentToolbarSettings.swift  AppIconVariant.swift  AppState.swift  EditorSettings.swift  EditorTabState.swift  FileTreeState.swift  GeneralSettingsKeys.swift  HeightMap.swift  HeightOracle.swift  HostdRuntimePreferences.swift  JjDiffViewerTabState.swift  JjPanelSnapshot.swift  JjPanelState.swift  KeyBinding.swift  KeyCombo.swift  LayoutConfig.swift  NotificationDeliverySettings.swift  Project.swift  ProjectSortMode.swift  SplitNode.swift  TabArea.swift  TerminalPaneState.swift  TerminalTab.swift  ToastState.swift  VCSTabState.swift  VcsKind.swift  ViewportState.swift  WindowTitleFormatter.swift  WorkspaceReducer.swift  WorkspaceSnapshot.swift  Worktree.swift  WorktreeConfig.swift  WrappedLineHeights.swift
Muxy/Services/: AIProviderIntegration.swift  AIUsageService.swift  ActivityLogStore.swift  AgentActivityReconciler.swift  AgentScreenDetectionService.swift  AppEnvironment.swift  CLIAccessor.swift  DeepSeekUsageParser.swift  GhosttyRuntimeEventAdapter.swift  GhosttyService.swift  GitDirectoryWatcher.swift  GitRepositoryService.swift  JSONFilePersistence.swift  KeyBindingStore.swift  MobileServerService.swift  MuxyConfig.swift  MuxyNotificationHooks.swift  NotificationNavigator.swift  NotificationSocketServer.swift  NotificationStore.swift  PairingRequestCoordinator.swift  PaneOwnershipStore.swift  ProjectOpenService.swift  ProjectPersistence.swift  ProjectSortingService.swift  RemoteServerDelegate.swift  ShellEscaper.swift  ShortcutActionDispatcher.swift  ThemeService.swift  UpdateService.swift  UserShellEnvironmentResolver.swift  UserShellResolver.swift  VcsDirectoryWatcher.swift  VcsKindDetector.swift  WorkspaceStatusStore.swift  WorktreeLocationResolver.swift  WorktreePersistence.swift  WorktreeSetupRunner.swift  WorktreeStore.swift  WorktreeTeardownRunner.swift
Muxy/Theme/: MuxyTheme.swift
Muxy/Views/: EmptyProjectPlaceholder.swift  GhosttyTerminalNSView.swift  IconButton.swift  MainWindow.swift  PaneNode.swift  PaneTree.swift  ProjectRow.swift  Sidebar.swift  SidebarDragHandle.swift  SplitContainer.swift  StartupView.swift  TabAreaView.swift  TabStrip.swift  TerminalPane.swift  VCSTabView.swift  WelcomeView.swift  Workspace.swift
MuxyMobile/: ConnectView.swift  ConnectionManager.swift  ContentView.swift  DemoBackend.swift  DeviceCredentialsStore.swift  Info.plist  MuxyMobileApp.swift  ProjectPickerView.swift  RemoteWorkspaceView.swift  SettingsSheet.swift  TerminalView.swift
MuxyMobile.xcodeproj/: project.pbxproj
MuxyServer/: ClientConnection.swift  MuxyRemoteServer.swift
MuxyShared/: MuxyProtocol.swift  ProjectDTO.swift  ProtocolParams.swift  VCSStatusDTO.swift  WorkspaceDTO.swift  WorktreeDTO.swift
MuxyShared/Agent/: AgentActivityEvent.swift  AgentActivityState.swift  AgentBinary.swift  AgentKind.swift  AgentPreset.swift  AgentReloadCommandBuilder.swift  AgentReloadMode.swift  ResumeArgs.swift  SessionLifecycleState.swift
MuxyShared/Config/: RoostAppConfigLocation.swift  RoostConfig.swift
MuxyShared/Hostd/: SessionRecord.swift
MuxyShared/Jj/: JjGraphGlyphLayout.swift  JjModels.swift
MuxyShared/Vcs/: VcsKind.swift  WorkspaceStatus.swift
RoostHostdAttach/: HostdAttachClient.swift  HostdAttachTerminal.swift  RoostHostdAttachMain.swift
RoostHostdCore/: HostdAttachSocketMessages.swift  HostdDaemonInstanceLock.swift  HostdDaemonSocketServer.swift  HostdLogger.swift  HostdOutputRingBuffer.swift  HostdProcessKeepalive.swift  HostdProcessRegistry.swift  HostdRuntimeOwnership.swift  HostdSocketIO.swift  HostdStorage.swift  HostdTerminalSnapshotStore.swift  HostdTmuxSession.swift  HostdXPCMessages.swift  HostdXPCProtocol.swift  RoostHostd.swift  SessionStore.swift
RoostHostdCore/AgentDetection/: AgentDetectionStateMachine.swift  AgentDetectorProtocol.swift  ClaudeCodeDetector.swift  CodexDetector.swift
RoostHostdDaemon/: main.swift
RoostHostdXPCService/: HostdXPCService.swift  Info.plist  XPCTransactionHostdProcessKeepalive.swift  main.swift
apps/Roost/: Info.plist  README.md  project.yml
crates/roost-attach/: Cargo.toml
crates/roost-attach/src/: main.rs
crates/roost-bridge/: Cargo.toml  build.rs
crates/roost-bridge/src/: hooks.rs  jj.rs  lib.rs
crates/roost-client/: Cargo.toml
crates/roost-client/examples/: reconcile_smoke.rs  session_smoke.rs  shutdown_release.rs  shutdown_smoke.rs  smoke.rs
crates/roost-client/src/: connection.rs  lib.rs  transport.rs
crates/roost-core/: Cargo.toml
crates/roost-core/src/: dto.rs  jj.rs  lib.rs  paths.rs  rpc.rs  session.rs
crates/roost-hostd/: Cargo.toml
crates/roost-hostd/src/: events.rs  main.rs  manifest.rs  rpc_server.rs  state.rs  store.rs
crates/roost-hostd/src/session/: mod.rs  osc.rs  registry.rs  ring.rs  spawn.rs
docs/: README.md  architecture.md  building-ghostty.md  getting-started.md  herdr-comparison.md  layouts.md  nix-darwin.md  notification-setup.md  permissions.md  release-distribution.md  remote-server.md  roost-migration-plan-review.md  roost-migration-plan.md  settings.md  troubleshooting.md
docs/developer/: agent-activity-push-redesign.md  agent-activity-tmux-control-mode-plan.md  (+3 more)
nix/: darwin-module.nix  package.nix
scripts/: build-release.sh  checks.sh  compile-app-icons.sh  generate-appcast.sh  run-mobile.sh  setup.sh  update-release-metadata.sh
(+450 files in other folders)
