[workspace]
resolver = "2"
members = [
    "crates/roost-core",
    "crates/roost-client",
    "crates/roost-hostd",
    "crates/roost-bridge",
    "crates/roost-attach",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/NextAlone/Roost"
license = "Apache-2.0"

[workspace.dependencies]
swift-bridge = "0.1.59"
swift-bridge-build = "0.1.59"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rand = "0.8"
base64 = "0.22"
libc = "0.2"
dirs = "5"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "signal",
    "sync",
    "time",
    "fs",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
portable-pty = "0.9"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
signal-hook = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
