[package]
name = "roost-bridge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Swift bindings for Roost; thin facade over roost-client + roost-core"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge.workspace = true
serde.workspace = true
serde_json.workspace = true
roost-core = { path = "../roost-core" }
roost-client = { path = "../roost-client" }

[build-dependencies]
swift-bridge-build.workspace = true
