[package]
name = "roost-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Synchronous Rust client SDK for roost-hostd over Unix socket"
publish = false

[dependencies]
roost-core = { path = "../roost-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc.workspace = true
base64.workspace = true

[dev-dependencies]
libc.workspace = true
