[package]
name = "roost-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Roost domain model, jj wrapper, paths, RPC wire types"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
