[package]
name = "roost-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Roost domain model, jj wrapper, paths, RPC wire types"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
uuid.workspace = true
